-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.9, 5.15.0, 5.15.1
-
None
-
Qt Creator 4.8.2
Qt SDK 5.12.2
-
-
2020wk32, 2020wk34
Using Qt Creator to run a Qt application on an Android device is very slow: on a recent MacBook Pro, androiddeployqt takes about 20 seconds for an empty Qt Quick application, and for our pretty small app with a bit of QML and some external libraries it takes up to a minute, even if there were no changes to the project. This really affects development and debugging speed.
For comparison, deploying an empty Android project with native code using Android Studio only takes about 3 seconds.
If possible, androiddeployqt should be smarter about the work being done and e.g. skip anything that hasn’t changed. Generating the final APK should be done by only exchanging modified resources in the APK instead of packaging all components each time.
- relates to
-
QTBUG-86573 Jdk 8+ throws warnings when building apps for Android
-
- Closed
-
-
QTCREATORBUG-20790 Allow quick binary upload for debugging on Android
-
- Reported
-
-
QTBUG-80403
Improve Android deployment
-
- Closed
-